Added all functionality. HTML, CSS, and JS fully functional.

--- a/index.html
+++ b/index.html
@@ -2,14 +2,396 @@
 <html>
   <head>
     <meta charset="UTF-8"> 
-    <title>Web Template</title> 
+    <title>SVGs</title> 
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
   </head>
   
 <body>
 	  
+<main id="container">
+	
+	<h2>Brendan Roger's SVG Icon Madness</h2>
 
+	<div class="svgs" id="vector1">
+		<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 300 300">
+		  <defs>
+		    <style>
+		      .aaa {
+		        fill: #e3f7fc;
+		      }
+		      .aab, .aac {
+		        fill: none;
+		      }
+		      .aab {
+		        stroke: #319ee8;
+		        stroke-miterlimit: 10;
+		        stroke-width: 25px;
+		      }
+		      .aac {
+		        stroke: #a007a0;
+		        stroke-linejoin: bevel;
+		        stroke-width: 12px;
+		      }
+		      .aad {
+		        fill: red;
+		      }
+		    </style>
+		  </defs>
+		  <title>rogers_brendan_icons</title>
+		  <g id="Icon1">
+		    <circle id="background1" class="aaa" cx="150" cy="150" r="121.5"/>
+		    <circle id="border1" class="aab" cx="150" cy="150" r="121.5"/>
+		    <path id="outline" class="aac" d="M133,222l-24.5-32.5h-13s-19-1-19-22v-43s0-21,22-21h100s21,1,21,18v48s3,21-19,21l-67-1Z"/>
+		    <ellipse id="dot" class="aad" cx="149" cy="146" rx="25" ry="23.86"/>
+		  </g>
+		</svg>
+		<h1>Video Messenger</h1>
+	</div>
+
+	<div class="svgs" id="vector2">
+		<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 300 300">
+		  <defs>
+		    <style>
+		      .baa {
+		        fill: #e3f7fc;
+		      }
+		      .bab, .bac {
+		        fill: none;
+		      }
+		      .bab {
+		        stroke: #319ee8;
+		        stroke-miterlimit: 10;
+		        stroke-width: 25px;
+		      }
+		      .bac {
+		        stroke: #a007a0;
+		        stroke-linejoin: bevel;
+		        stroke-width: 12px;
+		      }
+		      .bad {
+		        fill: red;
+		      }
+		    </style>
+		  </defs>
+		  <title>rogers_brendan_icons</title>
+		  <g id="Icon2">
+		    <circle id="background2" class="baa" cx="150" cy="150" r="121.5"/>
+		    <circle id="border2" class="bab" cx="150" cy="150" r="121.5"/>
+		    <path id="phone" class="bac" d="M117.5,181.5l-27,27L75,193s-21.5-17.5-.5-42.5C96.83,123.92,137,88,137,88s19.25-20.25,39.5,0,20,20.5,20,20.5h0L172,133s-12.5-17.5-25.5-6.5-30,30-30,30S102.5,169.5,117.5,181.5Z"/>
+		    <ellipse id="dot1" class="bad" cx="180" cy="199" rx="13" ry="12.41"/>
+		    <ellipse id="dot2" class="bad" cx="147" cy="198" rx="13" ry="12.41"/>
+		    <ellipse id="dot3" class="bad" cx="213" cy="199" rx="13" ry="12.41"/>
+		  </g>
+		</svg>
+		<h1>Call Waiting...</h1>
+	</div>
+		
+	<div class="svgs" id="vector3">
+		<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 300 300">
+		  <defs>
+		    <style>
+		      .daa {
+		        fill: #e3f7fc;
+		      }
+		      .dab, .dad {
+		        fill: none;
+		        stroke-miterlimit: 10;
+		      }
+		      .dab {
+		        stroke: #319ee8;
+		        stroke-width: 25px;
+		      }
+		      .dac {
+		        fill: red;
+		      }
+		      .dad {
+		        stroke: #a007a0;
+		        stroke-width: 15px;
+		      }
+		      .dae {
+		        fill: #fff;
+		      }
+		    </style>
+		  </defs>
+		  <title>rogers_brendan_icons</title>
+		  <g id="Icon3">
+		    <circle id="background3" class="daa" cx="152.5" cy="150.5" r="121.5"/>
+		    <circle id="border3" class="dab" cx="150.5" cy="150.5" r="121.5"/>
+		    <ellipse id="eyeRed" class="dac" cx="150" cy="150" rx="38" ry="36.27"/>
+		    <ellipse id="eyeBlack" cx="150" cy="149" rx="19" ry="18.14"/>
+		    <path id="eyeOutline" class="dad" d="M66,150s36-49,87-47,82,47,82,47-24.5,48.5-85.5,47.5S66,150,66,150Z"/>
+		    <ellipse id="eyeWhite" class="dae" cx="165" cy="133" rx="9" ry="8.59"/>
+		  </g>
+		</svg>
+		<h1>You're Being Watched symbol</h1>
+	</div>
+
+	<div class="svgs" id="vector4">
+		<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 300 300">
+		  <defs>
+		    <style>
+		      .eaa {
+		        fill: #e3f7fc;
+		      }
+		      .eab, .ead {
+		        fill: none;
+		        stroke-miterlimit: 10;
+		      }
+		      .eab {
+		        stroke: #319ee8;
+		        stroke-width: 25px;
+		      }
+		      .eac {
+		        fill: red;
+		      }
+		      .ead {
+		        stroke: #a007a0;
+		        stroke-width: 15px;
+		      }
+		    </style>
+		  </defs>
+		  <title>rogers_brendan_icons</title>
+		  <g id="Icon_4" data-name="Icon 4">
+		    <circle id="background4" class="eaa" cx="151.5" cy="150.5" r="121.5"/>
+		    <circle id="border4" class="eab" cx="151.5" cy="150.5" r="121.5"/>
+		    <path id="padLeft" class="eac" d="M77,145s29-6,32,10,15,33-20,43"/>
+		    <path id="padRight" class="eac" d="M226.42,144s-29-6-32,10-15,33,20,43"/>
+		    <path id="headphone" class="ead" d="M214,198.69a76,76,0,1,0-123.92,1.64"/>
+		  </g>
+		</svg>
+		<h1>Earphone Mode: Activated</h1>
+	</div>
+
+	<div class="svgs" id="vector5">
+		<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 300 300">
+		  <defs>
+		    <style>
+		      .faa {
+		        fill: #e3f7fc;
+		      }
+		      .fab {
+		        fill: none;
+		        stroke: #319ee8;
+		        stroke-miterlimit: 10;
+		        stroke-width: 25px;
+		      }
+		      .fac {
+		        fill: red;
+		      }
+		      .fad {
+		        fill: #a007a0;
+		      }
+		    </style>
+		  </defs>
+		  <title>rogers_brendan_icons</title>
+		  <g id="Icon5">
+		    <circle id="background5" class="faa" cx="151.5" cy="149.5" r="121.5"/>
+		    <circle id="border5" class="fab" cx="149.5" cy="149.5" r="121.5"/>
+		    <path id="noteRed" class="fac" d="M169.42,153.76s-9.65-9.07-23.54.28c-14.36,9.67-9.37,19.72.81,21.24,0,0,10.77,2.46,17-3.41s7.67-8.76,7.67-8.76l15.15-66.17s20.79,15.29,17.62,29.14-6.71,18.7-13,28.59c0,0,13.76-10.61,16.51-26.17s-9.33-27.81-11.42-35c-2.26-7.81-3.44-9.7-6.6-24.19Z"/>
+		    <path id="notePurple" class="fad" d="M144.31,187.5s-17-9.48-34,7.83c-17.57,17.89-7,30.19,8.2,29.07,0,0,16.4,0,23.43-10.06s8.2-14.54,8.2-14.54V103.62s35.14,14.54,35.14,34.67-3.51,28-9.37,43.62c0,0,16.4-19,15.23-41.38s-22.72-35.46-28.11-44.74c-5.86-10.06-8.2-12.3-17.58-31.31Z"/>
+		  </g>
+		</svg>
+		<h1>Composiion Mode: Engaged</h1>
+	</div>
+
+	<div class="svgs" id="vector6">
+		<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 300 300">
+		  <defs>
+		    <style>
+		      .gaa {
+		        fill: #e3f7fc;
+		      }
+		      .gab, .gad {
+		        fill: none;
+		        stroke-miterlimit: 10;
+		      }
+		      .gab {
+		        stroke: #319ee8;
+		        stroke-width: 25px;
+		      }
+		      .gac {
+		        fill: #a007a0;
+		      }
+		      .gad {
+		        stroke: red;
+		        stroke-width: 12px;
+		      }
+		    </style>
+		  </defs>
+		  <title>rogers_brendan_icons</title>
+		  <g id="Icon6">
+		    <circle id="background6" class="gaa" cx="149.5" cy="150.5" r="121.5"/>
+		    <circle id="border6" class="gab" cx="149.5" cy="150.5" r="121.5"/>
+		    <path id="puzzle" class="gac" d="M107.12,141.26l22.46-11.81s-18-17.25-3.62-23.81,23.76,13.21,23.76,13.21l24-12.63,10.18,19.36s-14.67,9.7-9.38,19.77,20.38,1.14,20.38,1.14l10.19,19.37-27.88,14.66s-1.59-19.93-18.26-12.14-2.65,23.15-2.65,23.15l-17.82,9.37-9.77-18.59s-16.51,15.61-26.29-3,16.51-15.61,16.51-15.61Z"/>
+		    <circle id="puzzleEye" class="gad" cx="152" cy="153" r="65"/>
+		  </g>
+		</svg>
+		<h1>Puzzle Inbound</h1>
+	</div>
+
+	<div class="svgs" id="vector7">
+		<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 300 300">
+		  <defs>
+		    <style>
+		      .haa {
+		        fill: #e3f7fc;
+		      }
+		      .hab, .hae {
+		        fill: none;
+		        stroke-miterlimit: 10;
+		      }
+		      .hab {
+		        stroke: #319ee8;
+		        stroke-width: 25px;
+		      }
+		      .hac {
+		        fill: red;
+		      }
+		      .had {
+		        fill: #a007a0;
+		      }
+		      .hae {
+		        stroke: #a007a0;
+		        stroke-linecap: round;
+		        stroke-width: 10px;
+		      }
+		    </style>
+		  </defs>
+		  <title>rogers_brendan_icons</title>
+		  <g id="Icon7">
+		    <circle id="background7" class="haa" cx="150.5" cy="149.5" r="121.5"/>
+		    <circle id="border7" class="hab" cx="150.5" cy="149.5" r="121.5"/>
+		    <circle id="sun" class="hac" cx="153" cy="150" r="58"/>
+		    <path id="moon" class="had" d="M161.78,200.76a50.76,50.76,0,1,1,41.47-80,64,64,0,1,0,0,58.5A50.67,50.67,0,0,1,161.78,200.76Z"/>
+		    <line id="ray2" class="hae" x1="219.1" y1="149" x2="241.9" y2="149"/>
+		    <line id="ray3" class="hae" x1="213.1" y1="182.6" x2="230.5" y2="200"/>
+		    <line id="ray1" class="hae" x1="213.1" y1="121.4" x2="230.5" y2="104"/>
+		  </g>
+		</svg>
+		<h1>The Sun and the Moon</h1>
+	</div>
+
+	<div class="svgs" id="vector8">
+		<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 300 300">
+		  <defs>
+		    <style>
+		      .iaa {
+		        fill: #e3f7fc;
+		      }
+		      .iab, .iag {
+		        fill: none;
+		        stroke-miterlimit: 10;
+		      }
+		      .iab {
+		        stroke: #319ee8;
+		        stroke-width: 25px;
+		      }
+		      .iac {
+		        fill: red;
+		      }
+		      .iad {
+		        fill: #d60000;
+		      }
+		      .iae {
+		        fill: #ff4343;
+		      }
+		      .iaf {
+		        fill: #fc2222;
+		      }
+		      .iag {
+		        stroke: #a007a0;
+		        stroke-linecap: round;
+		        stroke-width: 10px;
+		      }
+		    </style>
+		  </defs>
+		  <title>rogers_brendan_icons</title>
+		  <g id="Icon8">
+		    <circle id="background8" class="iaa" cx="151.5" cy="150.5" r="121.5"/>
+		    <circle id="border8" class="iab" cx="151.5" cy="150.5" r="121.5"/>
+		    <polygon id="armLeft" class="iac" points="151.95 150.14 133.95 125.84 78.15 125.84 123.15 159.14 151.95 150.14"/>
+		    <polygon id="starHead" class="iad" points="151.95 150.14 133.95 125.84 151.95 72.74 169.05 125.84 151.95 150.14"/>
+		    <polygon id="armRight" class="iac" points="151.95 150.14 169.05 125.84 224.85 125.84 179.85 159.14 151.95 150.14"/>
+		    <polygon id="legLeft" class="iae" points="151.95 150.14 123.15 159.14 106.05 212.24 151.95 178.94 151.95 150.14"/>
+		    <polygon id="legRight" class="iaf" points="151.95 150.14 151.95 178.94 196.95 212.24 179.85 159.14 151.95 150.14"/>
+		    <polygon id="starOutline" class="iag" points="151.5 72.51 168.83 125.84 224.9 125.84 179.54 158.8 196.87 212.13 151.5 179.17 106.14 212.13 123.46 158.8 78.1 125.84 134.17 125.84 151.5 72.51"/>
+		  </g>
+		</svg>
+		<h1>Favorited!</h1>
+	</div>
+
+	<div class="svgs" id="vector9">
+		<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 300 300">
+		  <defs>
+		    <style>
+		      .jaa {
+		        fill: #e3f7fc;
+		      }
+		      .jab {
+		        fill: none;
+		        stroke: #319ee8;
+		        stroke-miterlimit: 10;
+		        stroke-width: 25px;
+		      }
+		      .jac {
+		        fill: #a007a0;
+		      }
+		      .jad {
+		        fill: #d60000;
+		      }
+		    </style>
+		  </defs>
+		  <title>rogers_brendan_icons</title>
+		  <g id="Icon9">
+		    <circle id="background9" class="jaa" cx="148.5" cy="151.5" r="121.5"/>
+		    <circle id="border9" class="jab" cx="150.5" cy="149.5" r="121.5"/>
+		    <path id="burst2" class="jac" d="M129.23,168.72s65.27-27,62.19,3.89-63,.63-63,.63,39.1,57.93,7.41,64.16c-31.35,6.16-11.93-65-11.93-65s-53.76,27.85-53.15-2.31c.69-33.33,53.94-2.21,53.94-2.21S92.94,110,122.37,108.14C155.7,106.06,129.23,168.72,129.23,168.72Z"/>
+		    <path id="burst1" class="jad" d="M165.72,130.3s71,32.91,43.53,53.61-47.81-50.86-47.81-50.86-17.86,75.37-46.73,54.22c-28.57-20.93,44-58.5,44-58.5s-63.08-22.91-38-45.05C148.34,59.24,163,126,163,126s23.37-69.42,47-46.81C236.66,104.81,165.72,130.3,165.72,130.3Z"/>
+		  </g>
+		</svg>
+		<h1>Special Flowers tag</h1>
+	</div>
+
+	<div class="svgs" id="vector10">
+		<svg id="Icon10" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 300 300">
+		  <defs>
+		    <style>
+		      .kaa, .kad {
+		        fill: #e3f7fc;
+		      }
+		      .kab, .kac {
+		        fill: none;
+		      }
+		      .kab {
+		        stroke: #319ee8;
+		        stroke-width: 25px;
+		      }
+		      .kab, .kac, .kad {
+		        stroke-miterlimit: 10;
+		      }
+		      .kac {
+		        stroke: #a007a0;
+		        stroke-width: 19px;
+		      }
+		      .kad {
+		        stroke: red;
+		        stroke-linecap: round;
+		        stroke-width: 12px;
+		      }
+		    </style>
+		  </defs>
+		  <title>rogers_brendan_icons</title>
+		  <circle id="background10" class="kaa" cx="150.5" cy="149.5" r="121.5"/>
+		  <circle id="border10" class="kab" cx="150.5" cy="149.5" r="121.5"/>
+		  <circle id="clockFace" class="kac" cx="151" cy="150" r="65"/>
+		  <line id="minuteArm" class="kad" x1="150" y1="152" x2="150" y2="75"/>
+		  <line id="hourArm" class="kad" x1="151" y1="150" x2="113.5" y2="179.5"/>
+		</svg>
+		<h1>Pizza Alarm: Set.</h1>
+	</div>
+
+</main>
 
 <!-- at the bottom so the DOM gets built first, avoiding errors -->
 <script src="js/main.js" type="text/javascript"></script>
